# 3DViewer

./: README.md
datasets/gifimage/: qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h
datasets/giflib/: dgif_lib.c  egif_lib.c  gif_err.c  gif_font.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  quantize.c
src/: Makefile  main.h
src/3dviewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Back/: affine.c  parser.c  tests.c
src/doxygen/: Doxyfile
